--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,9 @@
 plugins {
-    id 'java'
+    id 'application'
+    id 'checkstyle'
+    id 'com.adarshr.test-logger' version '3.2.0'
+    id 'com.github.ben-manes.versions' version '0.48.0'
+    id 'jacoco'
 }
 
 group = 'hexlet.code'
@@ -16,4 +20,11 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport
+}
+
+jacocoTestReport {
+    reports {
+        xml.required = true
+    }
 }
