--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,9 @@ repositories {
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation platform('org.junit:junit-bom:5.11.0-M1')
+    testImplementation('org.assertj:assertj-core:3.25.3')
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.0-M1'
 }
 
 test {
