--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'com.adarshr.test-logger' version '3.2.0'
     id 'com.github.ben-manes.versions' version '0.48.0'
     id 'jacoco'
+    id "io.freefair.lombok" version "8.6"
 }
 
 group = 'hexlet.code'
